--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #db
 datasource.driver=org.postgresql.Driver
-datasource.url=jdbc:postgresql://localhost:5432/test
-datasource.username=postgres
-datasource.password=postgres
+datasource.url=jdbc:postgresql://localhost:5432/TEST
+datasource.username=POSTGRES
+datasource.password=POSTGRES
