--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+threadPool.corePoolSize=4
+threadPool.maxPoolSize=8
 #db
 datasource.driver=org.postgresql.Driver
 datasource.url=jdbc:postgresql://localhost:5432/TEST
