--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ datasource.driver=org.postgresql.Driver
 datasource.url=jdbc:postgresql://localhost:5432/TEST
 datasource.username=POSTGRES
 datasource.password=POSTGRES
+#system
+system.name=my system
