lesson7 migrate on gradle, spring boot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,4 @@
 threadPool.corePoolSize=4
 threadPool.maxPoolSize=8
-#db
-datasource.driver=org.postgresql.Driver
-datasource.url=jdbc:postgresql://localhost:5432/TEST
-datasource.username=POSTGRES
-datasource.password=POSTGRES
 #system
-system.name=my system
+system.name=my system1
