--- a/api/build.gradle
+++ b/api/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework:spring-web:5.2.9.RELEASE'
 }
 
 bootJar {
