--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ allprojects {
 }
 
 subprojects {
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
+    apply plugin: 'java'
+    apply plugin: 'idea'
     repositories {
         mavenCentral()
     }
