--- a/book-store-impl/build.gradle
+++ b/book-store-impl/build.gradle
@@ -10,7 +10,7 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.11'
     implementation 'commons-validator:commons-validator:1.7'
 
-    implementation group: 'net.rakugakibox.spring.boot', name: 'orika-spring-boot-starter', version: '1.9.0'
+    implementation 'net.rakugakibox.spring.boot:orika-spring-boot-starter:1.9.0'
 
     implementation project(':book-store-api')
 }
