--- a/book-store-impl/build.gradle
+++ b/book-store-impl/build.gradle
@@ -9,6 +9,8 @@ dependencies {
 
     implementation 'org.apache.commons:commons-lang3:3.11'
     implementation 'commons-validator:commons-validator:1.7'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
 
     implementation 'net.rakugakibox.spring.boot:orika-spring-boot-starter:1.9.0'
 
