--- a/book-store-impl/src/main/resources/application.yaml
+++ b/book-store-impl/src/main/resources/application.yaml
@@ -25,6 +25,17 @@ spring:
   liquibase:
     enabled: true
     change-log: classpath:/db/changelog/changelog-master.xml
+  jpa:
+    database-platform: org.hibernate.dialect.PostgreSQL10Dialect
+    properties:
+      hibernate.temp.use_jdbc_metadata_defaults: false
+    show-sql: true
+    hibernate:
+      hbm2ddl:
+        auto: none
+      default_schema: public
+      use_sql_comments: true
+      format_sql: true
 
 logging:
   level:
