--- a/book-store-api/build.gradle
+++ b/book-store-api/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
     implementation 'org.springframework:spring-web'
+    implementation 'io.swagger:swagger-annotations:1.5.20'
 }
 
 bootJar {
