--- a/book-store-impl/build.gradle
+++ b/book-store-impl/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     implementation 'commons-validator:commons-validator:1.7'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
     implementation 'net.rakugakibox.spring.boot:orika-spring-boot-starter:1.9.0'
 
